--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,16 @@ rand = { version = "0.9.0" }
 
 rayon = { version = "1.5.1" }
 
+# Optional dependencies for distributed examples
+tokio = { version = "1.40", features = ["full"], optional = true }
+serde = { version = "1.0", features = ["derive"], optional = true }
+bincode = { version = "1.3", optional = true }
+clap = { version = "4.5", features = ["derive"], optional = true }
+
 [features]
 asm = ["ark-ff/asm"]
 parallel = ["ark-std/parallel", "ark-ec/parallel", "ark-ff/parallel", "ark-poly/parallel"]
+distributed = ["tokio", "serde", "bincode", "clap"]
 default = []
 
 [profile.dev]
