refactored the project structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,8 @@ harness = false
 [[bench]]
 name = "setup"
 harness = false
+
+[[bin]]
+name = "distributed_protocol"
+path = "src/bin/distributed_protocol.rs"
+required-features = ["distributed"]
