--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-criterion = { version = "0.5.0", features = ["html_reports"] }
 ark-std = { version = "0.5.0", features = ["print-trace"] }
 ark-ec = { version = "0.5.0" }
 ark-ff = { version = "0.5.0" }
@@ -30,6 +29,9 @@ default = []
 
 [profile.dev]
 opt-level = 3
+
+[dev-dependencies]
+criterion = { version = "0.5.0", features = ["html_reports"] }
 
 [[bench]]
 name = "encryption"
