--- a/wasm-client/Cargo.toml
+++ b/wasm-client/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
 [dependencies]
 silent-threshold-encryption = { path = ".." }
 wasm-bindgen = "0.2"
@@ -14,7 +17,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 serde_json = "1.0"
 js-sys = "0.3"
-getrandom = { version = "0.2", features = ["js"] }
+getrandom = { version = "0.3", features = ["wasm_js"] }
 console_error_panic_hook = "0.1"
 
 # Arkworks dependencies
