--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,15 @@ tokio = { version = "1.40", features = ["full"], optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 bincode = { version = "1.3", optional = true }
 clap = { version = "4.5", features = ["derive"], optional = true }
+rustls = { version = "0.23", optional = true }
+tokio-rustls = { version = "0.26", optional = true }
+rustls-pemfile = { version = "2.1", optional = true }
+rcgen = { version = "0.13", optional = true }
 
 [features]
 asm = ["ark-ff/asm"]
 parallel = ["ark-std/parallel", "ark-ec/parallel", "ark-ff/parallel", "ark-poly/parallel"]
-distributed = ["tokio", "serde", "bincode", "clap"]
+distributed = ["tokio", "serde", "bincode", "clap", "rustls", "tokio-rustls", "rustls-pemfile", "rcgen"]
 default = []
 
 [profile.dev]
