--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ ark-bls12-381 = { version = "0.5.0" }
 ark-serialize = { version = "0.5.0" }
 rand = { version = "0.9.0" }
 zeroize = { version = "1.7", features = ["zeroize_derive"] }
+thiserror = { version = "2.0" }
 
 rayon = { version = "1.5.1" }
 
