--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ ark-ff = { version = "0.5.0" }
 ark-poly = { version = "0.5.0" }
 ark-bls12-381 = { version = "0.5.0" }
 ark-serialize = { version = "0.5.0" }
+blake2 = { version = "0.10", features = ["std"] }
 rand = { version = "0.9.0" }
 zeroize = { version = "1.7", features = ["zeroize_derive"] }
 thiserror = { version = "2.0" }
