--- a/wasm-client/Cargo.toml
+++ b/wasm-client/Cargo.toml
@@ -28,6 +28,7 @@ ark-poly = { version = "0.5.0", default-features = false }
 ark-bls12-381 = { version = "0.5.0", default-features = false, features = ["curve"] }
 ark-serialize = { version = "0.5.0", default-features = false }
 rand = { version = "0.9.0", default-features = false }
+blake2 = { version = "0.10", default-features = false }
 
 [dependencies.web-sys]
 version = "0.3"
